# MedicalQA

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/experiments/: baseline_vs_rag_comparison.csv  metrics_tracker.csv  sentence_evidence_analysis.csv  uncertainty_rag_analysis.csv
data/knowledge/: knowledge_base.csv  knowledge_base.parquet
data/processed/: golden_medquad.csv  golden_medquad.parquet  medquad_url_filtered.csv
docs/: architecture.md  data_schema.md  golden_dataset_pipeline.docx  processing_pipeline.md
notebooks/: README.md
scripts/: build_golden_dataset.py  build_knowledge_base.py  build_knowledge_db.py  compare_baseline_vs_rag.py  run_experiments.py  sentence_evidence_analysis.py  uncertainty_rag_analysis.py
src/medqa/: __init__.py  config.py  database.py  experiments.py  extract.py  knowledge.py  load.py  text.py  transform.py
src/medqa/rag/: chunker.py  embedder.py  llm.py  metrics.py  vectorstore.py
src/medqa_golden_dataset.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_database.py  test_etl.py
